<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:boxStrokeWidth="0dp"
        android:layout_margin="@dimen/base_dimen"
        android:hint="@string/edit_text_hint"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/search_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/filter_button"
        app:startIconDrawable="@drawable/search_default_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:clickable="false"
            android:focusable="false"
            android:cursorVisible="false"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/filter_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/search_background"
        android:layout_margin="@dimen/base_dimen"
        android:contentDescription="@string/filter_icon"
        android:src="@drawable/filter_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/search"
        app:layout_constraintBottom_toBottomOf="@id/search"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recommends"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_dimen"
        android:layout_marginTop="@dimen/base_dimen"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search"
        tools:listitem="@layout/item_recomend" />

    <TextView
        android:id="@+id/title_vacancy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_dimen"
        android:layout_marginTop="@dimen/recommend_title"
        android:text="@string/title_vacancy_in_search"
        android:textSize="@dimen/title_vacancy_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recommends" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/vacancies"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/base_dimen"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/show_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_vacancy"
        tools:itemCount="2"
        tools:listitem="@layout/item_vacancy" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/show_all"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cornerRadius="5dp"
        android:backgroundTint="#2B7EFE"
        android:layout_margin="@dimen/base_dimen"
        android:text="Еще 143 вакаинсии"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>